@@ -13,5 +13,4 @@
 - match attachment expressions:
 	match attachment (index > 1 and size < 200 and type "fnmatch")
 - attach get name from content-disposition
-- timer. don't wait for server forever
 - ifdef/endif directives in config file, change -D to not require a value
