@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.52 2007-02-09 15:40:20 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.53 2007-02-09 16:48:08 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -182,6 +182,10 @@ If
 is used, or this option does not appear in the configuration file,
 .Xr fdm 1
 does not attempt to set the group of new files and directories.
+.It Ic timeout Ar time
+This controls the maximum time to wait for a server to send data before closing
+a connection.
+The default is 900 seconds.
 .El
 .Sh INCLUDING FILES
 Further configuration files may be including using the
