@@ -1,4 +1,4 @@
-/* $Id: fetch-pop3.c,v 1.52 2007-02-09 15:40:20 nicm Exp $ */
+/* $Id: fetch-pop3.c,v 1.53 2007-02-09 16:48:10 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -121,7 +121,8 @@ pop3_connect(struct account *a)
 	char			*lbuf, *line, *cause;
 	size_t			 llen;
 
-	data->io = connectproxy(&data->server, conf.proxy, IO_CRLF, &cause);
+	data->io = connectproxy(&data->server, conf.proxy, IO_CRLF,
+	    conf.timeout * 1000, &cause);
 	if (data->io == NULL) {
 		log_warnx("%s: %s", a->name, cause);
 		xfree(cause);
