@@ -1,4 +1,4 @@
-/* $Id: parent.c,v 1.54 2007-02-09 15:40:20 nicm Exp $ */
+/* $Id: parent.c,v 1.55 2007-02-09 16:48:10 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -142,7 +142,7 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 	if (pid != 0) {
 		/* create privsep io */
 		close(fds[1]);
-		io = io_create(fds[0], NULL, IO_LF);
+		io = io_create(fds[0], NULL, IO_LF, INFTIM);
 
  		/* parent process. wait for child */
 		log_debug2("%s: forked. child pid is %ld", a->name, (long) pid);
@@ -205,7 +205,7 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 
 	/* create privsep io */
  	close(fds[0]);
-	io = io_create(fds[1], NULL, IO_LF);
+	io = io_create(fds[1], NULL, IO_LF, INFTIM);
 
 	/* child process. change user and group */
 	log_debug("%s: trying to deliver using uid %lu", a->name, (u_long) uid);
