@@ -5,6 +5,7 @@
   which may be added by the user. They may be inserted in strings using %[name].
   The autogenerated tags are aliased to the old single letter tokens. Based on
   a question from AJ Weber.
+* Added a timeout option to limit the time for which servers are waited.
 
 08 February 2007
 
@@ -43,4 +44,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.12 2007-02-09 15:40:20 nicm Exp $
+$Id: CHANGES,v 1.13 2007-02-09 16:48:07 nicm Exp $
